Apply comments from coderabbitai